Modify UI for better interaction

--- a/UI/css/order.css
+++ b/UI/css/order.css
@@ -21,11 +21,81 @@ body{
   border-bottom: 1px solid transparent;
   border-top-left-radius: 3px;
   border-top-right-radius: 3px;
-  background: #882222;
+  background: #13232f;
   text-align: center;
   color: #fff;
   font-weight: bold;
 }
+
+.order-grid {
+  grid-gap: 20px;
+  margin-bottom: 50px;
+  margin-top: 50px;
+  text-align: center;
+}
+
+.orders-btn {
+  margin: 10px 5px;
+  display: inline-block;
+  flex-direction: column;
+  width: 200px;
+  height: 100px;
+  color: #ddd;
+  font-weight: bold;
+  font-size: 1em;
+  line-height: 60px;
+  padding-top: 20px;
+  border:  none;
+  border-radius: 50px;
+  align-items: center;
+  box-shadow: 5px 10px #888888;
+  outline: none;
+}
+
+.orders-btn:active {
+  box-shadow: 0 5px #666;
+  transform: translateY(4px);
+}
+
+.orders-btn > a {
+  color: #fff;
+  text-decoration: none;
+}
+
+.btn-orders {
+  background: #3b5998;
+  transition: 0.5s;
+}
+
+.btn-orders:hover {
+  background: #000033;
+  cursor: pointer;
+  transition: 0.5s;
+}
+
+.btn-processed {
+  background: #007f00;
+  transition: 0.5s;
+}
+
+.btn-processed:hover {
+  background: #003200;
+  cursor: pointer;
+  transition: 0.5s;
+}
+
+.btn-pending {
+  background: #B2B200;
+  transition: 0.5s;
+}
+
+.btn-pending:hover {
+  background: #595900;
+  cursor: pointer;
+  transition: 0.5s;
+}
+
+
 
 .panel-body {
  padding: 10px 30px;
@@ -57,7 +127,8 @@ table tr {
 table th {
   padding: .625em;
   text-align: center;
-  border: 3px solid #882222;
+  border: 1px solid #13232f;
+  background: #ccc;
 }
 
 table td {
@@ -89,6 +160,11 @@ table th {
 }
 
 @media screen and (max-width: 600px) {
+
+  .process-order {
+    width: 60%;
+  }
+
   table {
     border: 0;
   }
