--- a/UI/css/login.css
+++ b/UI/css/login.css
@@ -2,18 +2,55 @@
 	height: 100vh;
 }
 
+
 .login-box {
-	width: 30%;
-	margin: 5% 35% 0 35%;
+	display: none;
+	width: 40%;
+	margin: 0 30% 0 30%;
 	height: 500px;
 	background: #13232f;
 	opacity: 0.95;
-	border-radius: 8px;
+	border-bottom-right-radius: 8px;
+  border-bottom-left-radius: 8px;
 	box-sizing: border-box;
 	color: #ddd;
 	text-align: center;
 	padding: 70px 30px;
 }
+
+
+.tab {
+	overflow: hidden;
+	border-bottom: 2px solid #882222;
+	background-color: #13232f;
+	width: 40%;
+	margin: 5% 30% 0 30%;
+	text-align: center;
+}
+
+
+.tab button {
+	background-color: inherit;
+	float: left;
+	color: #ddd;
+	border: none;
+	outline: none;
+	cursor: pointer;
+	padding: 14px 16px;
+	transition: 0.3s;
+	font-size: 17px;
+}
+
+
+.tab button:hover {
+	background-color: #882222;
+}
+
+.tab button.active {
+	background-color: #882222;
+}
+
+
 
 h3 {
 	margin: 0;
@@ -41,20 +78,23 @@ h3 {
 	color: #fff;
 }
 
-.login-box input[type="submit"] {
-	border: none;
-	outline: none;
-	height: 40px;
-	background: #882222;
-	color: #fff;
-	font-size: 18px;
-	border-radius: 10px;
+.login-box > form > a {
+  text-decoration: none;
+  padding: 10px 100px;
+  border: none;
+  outline: none;
+  height: 40px;
+  background: #882222;
+  color: #fff;
+  font-size: 18px;
+  border-radius: 10px;
 	opacity: 0.70;
+	margin-bottom: 100px;
 }
 
-.login-box input[type="submit"]:hover {
-	opacity: 1;
-	cursor: pointer;
+.login-box > form > a {
+  opacity: 1;
+  cursor: pointer;
 }
 
 .login-box a {
@@ -66,10 +106,15 @@ h3 {
 /*EDITED MEDIA QUERIES SECTION*/
 /* RESPONSIVE DESIGN */
 @media(max-width: 768px) {
+	.tab {
+		width: 95%;
+		margin: 20% 2.5% 0 2.5%;
+	}
+
   .login-box {
 		width: 95%;
-		margin: 20% 2.5% 10% 2.5%;
-		height: 600px;
+		margin: 0 2.5% 10% 2.5%;
+		height: 500px;
 		padding: 60px 20px;
 	}
 	
@@ -79,10 +124,15 @@ h3 {
 }
 
 @media (min-width: 769px) and (max-width: 1200px) {
+	.tab {
+		width: 90%;
+		margin: 20% 5% 0 5%;
+	}
+
   .login-box {
 		width: 90%;
-		margin: 10% 5% 0 5%;
-		height: 700px;
+		margin: 0 5% 0 5%;
+		height: 600px;
 	}
 }
 
