--- a/UI/css/menu.css
+++ b/UI/css/menu.css
@@ -34,10 +34,32 @@ h1 {
 }
 
 
+.cart-button {
+  float: right;
+  padding: 10px 20px;
+  background: #13232f;
+  opacity: 0.90;
+  outline: none;
+  border-radius: 5px;
+  margin-right: 20px;
+  color: #ddd;
+}
+
+.cart-button:hover {
+  opacity: 1;
+  cursor: pointer;
+}
+
+.cart-button > a {
+  color: #fff;
+}
+
 .box > p {
   background: #fff;
   height: 50px;
 }
+
+
 
 .box > img {
   max-width: 100%;
@@ -61,132 +83,4 @@ h1 {
   opacity: 1;
 }
 
-.submitBtn {
-  background: #13232f;
-  color: #ddd;
-  font-weight: bold;
-  padding: 15px 10px;
-  width: 20%;
-  outline: none;
-  opacity: 0.90;
-  border-radius: 8px;
-}
 
-.submitBtn:hover {
-  opacity: 1;
-  cursor: pointer;
-}
-
-
-/*EDIT MENU MODAL DISPLAY*/
-
-#detailsModal {
-  display: none;
-  position: fixed;
-  z-index: 100;
-  padding-top: 50px;
-  left: 0;
-  top: 0;
-  width: 100%; 
-  height: 100%; 
-  overflow: auto; 
-  background-color: rgb(0,0,0); 
-  background-color: rgba(0,0,0,0.6);;
-}
-
-.card {
-  width: 40%;
-  margin: 0 auto;
-  text-align: center;
-  font-family: arial;
-  background-color: #f4f4f4;
-}
-
-.modalImg {
-  width: 70%;
-}
-
-input[type=submit] {
-  width: 50%;
-  background-color: #4CAF50;
-  color: white;
-  padding: 10px 15px;
-  margin: 8px 0;
-  border: none;
-  border-radius: 4px;
-  cursor: pointer;
-}
-
-
-
-@media (max-width: 768px) {
-  input[type=submit] {
-    width: 80%;
-  }
-  
-  .card {
-    width: 90%;
-  }
-
-  .submitBtn {
-    width: 50%
-  }
-
-}
-
-
-@media (max-width: 1200px) and (min-width: 769px) {
-  .card {
-    width: 80%;
-  }
-
-  .submitBtn {
-    width: 40%;
-  }
-}
-
-input[type=submit]:hover {
-  background-color: #45a049;
-}
-
-.finishEdit {
-  border: none;
-  outline: 0;
-  /* display: inline-block; */
-  padding: 8px;
-  color: white;
-  background-color: #0038a8;
-  text-align: center;
-  cursor: pointer;
-  width: 60%;
-  font-size: 15px;
-}
-
-.finishEdit:hover {
-  background: #002366;
-}
-
-.close-btn {
-  border: none;
-  outline: 0;
-  display: inline-block;
-  padding: 8px;
-  color: white;
-  background-color: #000;
-  text-align: center;
-  cursor: pointer;
-  width: 100%;
-  font-size: 18px;
-}
-
-.close-btn:hover, a:hover {
-  opacity: 0.7;
-}
-
-.card-title {
-  background-color: #000;
-  color: #fff;
-  margin-bottom: 10px;
-  height: 70px;
-
-}
