--- a/UI/css/order.css
+++ b/UI/css/order.css
@@ -1,5 +1,29 @@
+@import url('https://fonts.googleapis.com/css?family=Anton|Gaegu|IBM+Plex+Mono|Noto+Serif|Roboto+Slab');
+
 body{
-  background: #ccc;
+  margin: 0;
+  margin: 0;
+	background-image: url('../files/bread.jpeg');
+  background-size: cover;
+  font-family: 'Roboto Slab', serif;
+}
+
+
+.nav-bar {
+  background-color: #882222;
+}
+
+.brand {
+  background: #13232f;
+}
+
+.nav-bar a:hover {
+  background: #13232f !important;
+}
+
+.active {
+  background-color: #13232f;
+  color: white;
 }
 
 .container { 
@@ -11,17 +35,15 @@ body{
   margin: 0 0 30px 0;
   background-color: #fff;
   border: 1px solid transparent;
-  border-radius: 4px;
-  -webkit-box-shadow: 0 1px 1px rgba(0, 0, 0, .05);
-          box-shadow: 0 1px 1px rgba(0, 0, 0, .05);
+  border-radius: 20px;
 }
 
 .heading {
   padding: 10px 15px;
   border-bottom: 1px solid transparent;
-  border-top-left-radius: 3px;
-  border-top-right-radius: 3px;
-  background: #13232f;
+  border-top-left-radius: 20px;
+  border-top-right-radius: 20px;
+  background: #D52F2F;
   text-align: center;
   color: #fff;
   font-weight: bold;
@@ -39,14 +61,14 @@ body{
   display: inline-block;
   flex-direction: column;
   width: 200px;
-  height: 100px;
+  height: 150px;
   color: #ddd;
   font-weight: bold;
   font-size: 1em;
-  line-height: 60px;
+  line-height: 80px;
   padding-top: 20px;
   border:  none;
-  border-radius: 50px;
+  border-radius: 20px;
   align-items: center;
   box-shadow: 5px 10px #888888;
   outline: none;
@@ -118,23 +140,22 @@ table {
   table-layout: fixed;
 }
 
-table tr {
-  background-color: #f8f8f8;
-  border: 1px solid #882222;
-  padding: .35em;
+table tr:nth-child(even){background-color: #f2f2f2;}
+
+table tr:hover {background-color: #ddd;}
+
+table th, table td {
+  padding: .625em;
+  text-align: center;
+  border: 1px solid #ddd; 
 }
+
+
 
 table th {
-  padding: .625em;
-  text-align: center;
-  border: 1px solid #13232f;
-  background: #ccc;
-}
-
-table td {
-  padding: .625em;
-  text-align: center;
-  border: 1px solid #000;
+  padding-top: 12px;
+  padding-bottom: 12px;
+  background-color: #f2f2f2;
 }
 
 table th {
@@ -194,10 +215,6 @@ table th {
   }
   
   table td::before {
-    /*
-    * aria-label has no advantage, it won't be read inside a table
-    content: attr(aria-label);
-    */
     content: attr(data-label);
     float: left;
     font-weight: bold;
@@ -207,4 +224,13 @@ table th {
   table td:last-child {
     border-bottom: 0;
   }
+}
+
+
+
+
+
+
+.footer {
+  background: #882222; 
 }
