--- a/UI/css/login.css
+++ b/UI/css/login.css
@@ -4,52 +4,17 @@
 
 
 .login-box {
-	display: none;
 	width: 40%;
-	margin: 0 30% 0 30%;
+	margin: 5% 30% 0 30%;
 	height: 500px;
 	background: #13232f;
 	opacity: 0.95;
-	border-bottom-right-radius: 8px;
-  border-bottom-left-radius: 8px;
+	border-radius: 8px;
 	box-sizing: border-box;
 	color: #ddd;
 	text-align: center;
 	padding: 70px 30px;
 }
-
-
-.tab {
-	overflow: hidden;
-	border-bottom: 2px solid #882222;
-	background-color: #13232f;
-	width: 40%;
-	margin: 5% 30% 0 30%;
-	text-align: center;
-}
-
-
-.tab button {
-	background-color: inherit;
-	float: left;
-	color: #ddd;
-	border: none;
-	outline: none;
-	cursor: pointer;
-	padding: 14px 16px;
-	transition: 0.3s;
-	font-size: 17px;
-}
-
-
-.tab button:hover {
-	background-color: #882222;
-}
-
-.tab button.active {
-	background-color: #882222;
-}
-
 
 
 h3 {
@@ -78,7 +43,12 @@ h3 {
 	color: #fff;
 }
 
+input[type="password"] {
+	margin-bottom: 50px;
+}
+
 .login-box > form > a {
+  
   text-decoration: none;
   padding: 10px 100px;
   border: none;
@@ -88,13 +58,18 @@ h3 {
   color: #fff;
   font-size: 18px;
   border-radius: 10px;
-	opacity: 0.70;
-	margin-bottom: 100px;
+  opacity: 0.70;
+  box-shadow: 1px 3px #888888;
 }
 
-.login-box > form > a {
+.login-box > form > a:hover {
   opacity: 1;
   cursor: pointer;
+}
+
+.login-box > form > a:active {
+  box-shadow: 0 5px #666;
+  transform: translateY(4px);
 }
 
 .login-box a {
@@ -106,14 +81,10 @@ h3 {
 /*EDITED MEDIA QUERIES SECTION*/
 /* RESPONSIVE DESIGN */
 @media(max-width: 768px) {
-	.tab {
-		width: 95%;
-		margin: 20% 2.5% 0 2.5%;
-	}
 
   .login-box {
 		width: 95%;
-		margin: 0 2.5% 10% 2.5%;
+		margin: 5% 2.5% 10% 2.5%;
 		height: 500px;
 		padding: 60px 20px;
 	}
@@ -124,14 +95,10 @@ h3 {
 }
 
 @media (min-width: 769px) and (max-width: 1200px) {
-	.tab {
-		width: 90%;
-		margin: 20% 5% 0 5%;
-	}
 
   .login-box {
 		width: 90%;
-		margin: 0 5% 0 5%;
+		margin: 5% 5% 0 5%;
 		height: 600px;
 	}
 }
