--- a/UI/css/set-menu.css
+++ b/UI/css/set-menu.css
@@ -17,10 +17,6 @@ html {
   background-color: #882222;
 }
 
-.brand {
-  background: #13232f;
-}
-
 .nav-bar a:hover {
   background: #13232f !important;
 }
@@ -45,11 +41,11 @@ h1 {
 }
 
 .box {
-  margin: 10px 0;
+  margin: 20px 40px;
   display: inline-block;
   flex-direction: column;
   width: 300px;
-  height: 370px;
+  height: 360px;
   padding-top: 20px;
   cursor: pointer;
   border: 3px solid #ccc;
@@ -73,12 +69,14 @@ h1 {
 .btn {
   background: #ccc;
   color: #000;
+  margin-top: 10px;
   font-weight: bold;
   outline: none;
   padding: 10px 20px;
   border-radius: 10px;
   width: 80%;
   opacity: 0.86;
+  box-shadow: 0 3px #888888;
 }
 
 .btn:hover {
@@ -86,8 +84,16 @@ h1 {
   opacity: 1;
 }
 
+.btn:active {
+  box-shadow: 0 5px #666;
+  transform: translateY(4px);
+}
+
 
 @media screen and (max-width: 600px) {
+  .box {
+    margin: 10px 0;
+  }
 }
 
 
