--- a/UI/css/sign-up.css
+++ b/UI/css/sign-up.css
@@ -1,47 +1,12 @@
 
-
-.tab {
-    overflow: hidden;
-    border-bottom: 2px solid #882222;
-    background-color: #13232f;
-    width: 40%;
-    margin: 5% 30% 0 30%;
-    text-align: center;
-}
-
-
-.tab button {
-    background-color: inherit;
-    float: left;
-    color: #ddd;
-    border: none;
-    outline: none;
-    cursor: pointer;
-    padding: 14px 16px;
-    transition: 0.3s;
-    font-size: 17px;
-}
-
-
-.tab button:hover {
-    background-color: #882222;
-}
-
-.tab button.active {
-    background-color: #882222;
-}
-
-
-
 .sign-up {
   min-height: 100%;
 }
 
 .signup-box {
-  display: none;
   width: 40%;
-  margin: 0 30% 5% 30%;
-  height: 700px;
+  margin: 5% 30% 5% 30%;
+  height: 800px;
   background: #13232f;
   opacity: 0.95;
   border-bottom-right-radius: 8px;
@@ -81,12 +46,19 @@
   font-size: 18px;
   border-radius: 10px;
   opacity: 0.70;
+  box-shadow: 1px 3px #888888
 }
 
-.signup-box > form > a {
+.signup-box > form > a:hover {
   opacity: 1;
   cursor: pointer;
 }
+
+.signup-box > form > a:active {
+  box-shadow: 0 5px #666;
+  transform: translateY(4px);
+}
+
 
 .signup-box a {
   color: gray;
@@ -96,15 +68,11 @@
 
 /*EDITED MEDIA QUERIES SECTION*/
 @media (max-width: 768px) {
-	.tab {
-		width: 95%;
-		margin: 20% 2.5% 0 2.5%;
-	}
 
 	.signup-box {
 		width: 95%;
-		margin: 0 2.5% 0 2.5%;
-		height: 800px;
+		margin: 5% 2.5% 0 2.5%;
+		height: 900px;
 	}
 
 	.signup-box p {
@@ -113,15 +81,12 @@
 }
 
 @media (max-width: 1200px) and (min-width: 769px) {
-	.tab {
-		width: 90%;
-		margin: 20% 5% 0 5%;
-	}
+
 
 	.signup-box {
 		width: 90%;
-		margin: 0 5% 0 5%;
+		margin: 5% 5% 0 5%;
 		padding: 80px 20px;
-		height: 950px;
+		height: 1000px;
 	}
 }
