--- a/UI/css/styles.css
+++ b/UI/css/styles.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css?family=Gamja+Flower|Gugi|Skranji|Ubuntu');
+
 body {
   margin: 0;
   margin: 0;
@@ -16,10 +18,12 @@ body {
 
 .right {
   float: right;
+  margin: 0 20px;
 }
 
 .brand {
-  background: #882222;
+  margin-left: 20px;
+  font-family: 'Gugi';
 }
 
 .nav-bar a, .right a {
