--- a/UI/css/login.css
+++ b/UI/css/login.css
@@ -7,7 +7,7 @@
 	width: 40%;
 	margin: 5% 30% 0 30%;
 	height: 500px;
-	background: #13232f;
+	background: rgb(175, 150, 150);;
 	opacity: 0.95;
 	border-radius: 8px;
 	box-sizing: border-box;
@@ -23,10 +23,9 @@ h3 {
 	font-weight: bold;
 }
 
-.login-box p {
-	margin: 0;
-	padding: 0;
-	font-size: 0.8em;
+.login-box h3, p {
+	font-size: 1em;
+	color: #000;
 }
 
 .login-box input {
@@ -34,13 +33,13 @@ h3 {
 	margin-bottom: 20px;
 }
 
-.login-box input[type="text"], input[type="password"] {
+.login-box input {
 	border: none;
-	border-bottom: 2px solid #ddd;
+	border-bottom: 2px solid #000;
 	background: transparent;
 	outline: none;
 	height: 40px;
-	color: #fff;
+	color: #000;
 }
 
 input[type="password"] {
@@ -58,7 +57,7 @@ input[type="password"] {
   color: #fff;
   font-size: 18px;
   border-radius: 10px;
-  opacity: 0.70;
+  opacity: 0.90;
   box-shadow: 1px 3px #888888;
 }
 
@@ -73,7 +72,7 @@ input[type="password"] {
 }
 
 .login-box a {
-	color: gray;
+	color: green;
 }
 
 
