--- a/UI/css/order.css
+++ b/UI/css/order.css
@@ -8,19 +8,21 @@ body{
   font-family: 'Roboto Slab', serif;
 }
 
-
-.nav-bar {
-  background-color: #882222;
+.top-div > button {
+  margin: 0 15px;
+  padding: 10px 10px;
+  background: #13232f;
+  color: #ddd;
+  border: none;
+  border-radius: 5px;
+  opacity: 0.9;
 }
 
-.nav-bar a:hover {
-  background: #13232f !important;
+.top-div > button:hover {
+  opacity: 1;
+  cursor: pointer;
 }
 
-.active {
-  background-color: #13232f;
-  color: white;
-}
 
 .container { 
   width: 95%;
