--- a/UI/css/sign-up.css
+++ b/UI/css/sign-up.css
@@ -6,19 +6,41 @@
 .signup-box {
   width: 40%;
   margin: 5% 30% 5% 30%;
-  height: 800px;
-  background: #13232f;
+  height: 850px;
+  background: rgb(175, 150, 150);
   opacity: 0.95;
-  border-bottom-right-radius: 8px;
-  border-bottom-left-radius: 8px;
+  border-radius: 10px;
   box-sizing: border-box;
-  color: #ddd;
+  color: #000;
   text-align: center;
   padding: 40px 20px;
 }
 
 .signup-box p {
-  font-size: 0.8em;
+  font-size: 1em;
+}
+
+select {
+  width: 100%;
+  outline: none;
+  height: 35px;
+  border: 2px solid #000;
+  border-radius: 5px;
+  background: #fff;
+  color: #000;
+  font-size: 1em;
+  cursor: pointer;
+  margin-bottom: 10px;
+}
+
+option {
+  background: #fff;
+  border-radius: 5px;
+  list-style-position: inside;
+}
+
+option:hover {
+  cursor: pointer;
 }
 
 .signup-box input {
@@ -28,11 +50,12 @@
 
 .signup-box input[type="text"], input[type="password"], input[type="email"] {
   border: none;
-  border-bottom: 2px solid #ddd;
+  border-bottom: 2px solid #000;
   background: transparent;
   outline: none;
   height: 40px;
-  color: #fff;
+  color: #000;
+  font-size: 1em;
 }
 
 .signup-box > form > a {
@@ -45,8 +68,12 @@
   color: #fff;
   font-size: 18px;
   border-radius: 10px;
-  opacity: 0.70;
+  opacity: 0.9;
   box-shadow: 1px 3px #888888
+}
+
+.signup-box > form > p > a {
+  color: green;
 }
 
 .signup-box > form > a:hover {
